few seo optimizations

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="BadMonkey is an experienced web developer who creates high-quality and user-friendly websites. With a strong background in web development and a passion for creating modern and innovative designs, BadMonkey can help you bring your online vision to life."
     />
-    <title>Arsenii BadMonkey Aivazian</title>
+    <title>BadMonkey - Experienced Web Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
