image size fixed added manifest.json

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
       name="description"
       content="BadMonkey is an experienced web developer who creates high-quality and user-friendly websites. With a strong background in web development and a passion for creating modern and innovative designs, BadMonkey can help you bring your online vision to life."
     />
+    <meta name="theme-color" content="#ffffff">
     <title>BadMonkey - Experienced Web Developer</title>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
